# tmux-project-cfg-rs

./: .travis.yml  Cargo.toml  README.md  ROADMAP.md
src/: error.rs  error_tests.rs  keys_cfg.rs  lib.rs  pane_cfg.rs  pane_cfg_tests.rs  panes_cfg.rs  panes_cfg_tests.rs  project_cfg.rs  project_cfg_tests.rs  session_cfg.rs  session_cfg_tests.rs  sessions_cfg.rs  sessions_cfg_tests.rs  window_cfg.rs  window_cfg_tests.rs  windows_cfg.rs  windows_cfg_tests.rs
tests/: pane_cfg_tests.rs  pane_cfg_tests.rs_  panes_cfg_tests.rs  project_cfg_tests.rs  session_cfg_tests.rs  sessions_cfg_tests.rs  version_tests.rs  window_cfg_tests.rs  windows_cfg_tests.rs  windows_cfg_tests.rs_
