[package]
name = "tmux_project_cfg"
version = "0.0.1"
authors = ["Anton Gepting <anton.gepting@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux_interface = { version = "0.0.7", path = "../tmux-interface"}
serde = "*"
#serde_json = "*"
serde_derive = "*"
serde_yaml = "*"
